src/main/webapp/css/main.css
html, body, #map_wrapper, #right, .main {
    height: 100%;
    width: 100%;
}

body, .main {
    padding: 0px;
    font-family: Arial, sans-serif;
}

#map_canvas {
    min-width: 500px;
    min-height: 500px;
    height: 100%;
    width: 100%;
}

header {
    height: 90px;
}

header h1 {
    font-size: 2.5em;
    padding: 20px;
    margin: 0;
}

#right {
    float: left;
    width: 100%;
}

#map_wrapper {
    margin-left: 400px;
}

#left {
    float: left;
    width: 400px;
    margin-left: -100%;
    overflow: auto;
    z-index: 0;
    position: relative;

}

footer {
    clear: left;
    width: 100%;
    text-align: center;
    padding: 4px 0;
}

.section {
    margin: 0 0 10px 10px;
}

.menuSection {
    margin: 5px 0;
    padding: 5px 0;
    clear: left;
}

.menuContent {
    margin-left: 95px;
}

.markerSection {
    float: left;
    width: 25px;
    padding: 0 10px 0 0;
}

.iconSection {
    float: left;
    padding: 0 10px 0 0;
}

a, a:hover, a:visited {
    text-decoration: none;
}

a.activationLink {
    font-size: 1.2em;
}

.sliderContainer {
    padding: 10px !important;
}

#sliderTime {
    font-weight: bold;
}

